--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Shaun O'Neill",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "latest",
+    "ejs": "^2.5.7",
     "express": "^4.16.2"
   }
 }
