--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "latest",
     "chalk": "^2.3.0",
     "ejs": "^2.5.7",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "mongoose": "^5.0.3"
   }
 }
