--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "body-parser": "latest",
     "chalk": "^2.3.0",
+    "didyoumean": "^1.2.1",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
-    "mongoose": "^5.0.3"
+    "mongoose": "^5.0.3",
+    "morgan": "^1.9.0"
   }
 }
